# contextlite

./: .bfg-replacements.txt  .dockerignore  .env.template  .errcheck  .gitignore  .goreleaser.yaml  12GB_SCALE_TEST_RESULTS.md  ABANDONED_CART_DEPLOYMENT_CHECKLIST.md  ABANDONED_CART_RECOVERY_SETUP.md  ABANDONED_CART_TESTING_GUIDE.md  ATOMIC_SPLIT_PLAN.md  ATOMIC_SPLIT_PLAN_ORIGINAL.md  BACKGROUND_DAEMON_RESEARCH.md  BUILD.md  BUSINESS_ACCOUNT_SETUP_GUIDE.md  CHANGELOG_v2.md  CHAT_ANALYSIS_NOTES.md  CHOCOLATEY_ESCAPE_PLAN.md  CLAUDE.md  COMPLETE_AUDIT_REPORT.md  COMPLETE_TECHNICAL_WIKI.md  COMPREHENSIVE_INTEGRATION_TEST_FRAMEWORK.md  COMPREHENSIVE_TESTING_STRATEGY.md  CONTEXTLITE-CLOUD.md  CONTEXTLITE.md  CONTEXTLITE_WEBSITE_AUDIT_REPORT.md  CONTEXTLITE_WEBSITE_AUDIT_UPDATED.md  CONTEXTLITE_WIKI.md  CONTRIBUTING.md  COPILOT_CONTEXT_MASTER.md  CRATES_IO_CHARACTER_FIX.md  CRATES_IO_DEPLOYMENT_FIX.md  CRATES_IO_FIX_REPORT.md  CRITICAL_IP_EXPOSURE_AUDIT.md  CRITICAL_QA_GAPS.md  CRITICAL_TASK_MASTER_LIST.md  CURRENT_STATUS_ASSESSMENT.md  DEMO_DEPLOYMENT_KIT.md  DEMO_SITE_IMPLEMENTATION_PLAN.md  DEPLOYMENT_ANALYSIS_CONFUSION_RESOLVED.md  (+237 more)
.claude/: settings.local.json
.contextlite/: config.yaml
.githooks/: pre-commit
.github/: copilot-instructions.md
adapters/rust/contextlite-client/: .gitignore  Cargo.toml  README.md  libtypes.rlib  test_types.rs
adapters/rust/contextlite-client/examples/: basic_usage.rs  test_integration.rs
adapters/rust/contextlite-client/src/: client.rs  error.rs  lib.rs  types.rs
adapters/rust/contextlite-client/tests/: integration_test.rs
archive/: README.md  cache_demo.go  comprehensive_demo.go  debug_pipeline.go  test_api_fields.go  test_api_quick.sh  test_baseline.go  test_counterexample.go  test_health.go  test_z3_debug.go  test_z3_raw.go  test_z3_simple.go  test_z3_smt.go  validate_z3_integration.sh  verify_complete_api.go  z3_corrected_input.smt2  z3_corrected_output.txt  z3_counterexample_input_1755369448.smt2  z3_counterexample_output_1755369448.txt  z3_debug_input.smt2  z3_debug_output.txt
archive_backup/: README.md  bash.exe.stackdump  comprehensive_12gb_benchmark.go  generate_scale_corpus.go  go.mod  test.smt2  test_api_quick.sh  validate_z3_integration.sh  z3_smt_benchmark.go
bench/: http_bench_test.go
chocolatey/: contextlite.nuspec
chocolatey-fixed/: contextlite.1.0.15.nupkg  contextlite.nuspec
cli-tools/: contextlite-cli
cofounder-package/: LICENSE-PRO.key  README.md
configs/: cluster.yaml  default.yaml  per-project-setup.yaml
contextlite-download/: README.md  app.py
demo-site/: PRODUCTION_CONFIG.yml  README.md  deploy.sh
docker/: Dockerfile  README.md  docker-compose.yml  nginx.conf
docker-build/: Dockerfile
docs/: AI_MEMORY_STRATEGY.md  API_REFERENCE.md  AUTOMATIC_PORT_MANAGEMENT.md  AUTO_DISCOVERY_FEASIBILITY_REPORT.md  AUTO_DISCOVERY_QUICK_START.md  AUTO_DISCOVERY_ROLLOUT.md  CLUSTERING_GUIDE.md  COMPLETE_AUDIT_REPORT.md  CRITIQUE_RESPONSE.md  DEPLOYMENT_MANAGEMENT.md  ENTERPRISE_LICENSE_SEGREGATION.md  FEATURE_FORMULAS.md  HONEST_COMPLIANCE_ASSESSMENT.md  MARKETING_BLAST_STRATEGY.md  MIGRATION_GUIDE_v2.md  MULTI_PROJECT_WORKFLOW.md  NEW_PLAN.md  PAIRWISE_DEMONSTRATION.md  README.md  REPOSITORY_CLEANUP_REPORT.md  SMT_IMPLEMENTATION_STATUS.md  STEP5_COMPLETE.md  UPDATED_WIKI_OVERVIEW.md  enterprise-strategy.md  index.html  sota_comparison.json
examples/: automatic_port_management.go  cli_integration_example.go
homebrew/: README.md  contextlite.rb
huggingface-space/: README.md  app.py  requirements.txt
jetbrains-plugin/: build.gradle.kts
mcp-server/: contextlite_mcp.py  mcp_settings.json
npm-wrapper/: README.md  package-lock.json  package.json  tsconfig.json
packaging/python-wrapper/: README.md  contextlite.py  setup.cfg
product-site/: faq-test.html  index-clean.html  index-fixed.html  index.html  license.html  privacy.html  terms.html
python-wrapper/: pyproject.toml
release-radar/: DEPLOYMENT_DEBUGGING_SESSION_RESULTS.md  DEPLOYMENT_STATUS_REPORT.md
scripts/: README.md  README_DEPLOYMENT_METRICS.md  analyze-architecture.ps1  analyze-architecture.sh  chat-history-analyzer.go  chat-history-ingester.go  dashboard.sh  deploy-web-terminal.sh  deploy.sh  (+25 more)
(+524 files in other folders)
