[metadata]
name = contextlite
version = 1.0.0
description = Lightweight semantic context search engine
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Michael-A-Kuykendall/contextlite
author = Michael A. Kuykendall
author_email = michael@kuykendall.dev
license = MIT
license_files = LICENSE.md
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Text Processing :: Indexing
    Topic :: Scientific/Engineering :: Information Analysis
keywords = context, search, semantic, indexing, retrieval

[options]
py_modules = contextlite
python_requires = >=3.7
install_requires =
    requests>=2.25.0

[options.extras_require]
dev =
    pytest>=6.0
    pytest-cov>=2.10
    black>=21.0
    flake8>=3.8
    mypy>=0.812

[options.entry_points]
console_scripts =
    contextlite = contextlite:main

[bdist_wheel]
universal = 1
