[package]
name = "contextlite-client"
version = "2.0.0"
edition = "2021"
authors = ["ContextLite Team <support@contextlite.com>"]
description = "Ultra-fast Rust client for ContextLite - the high-performance context engine for retrieval and AI applications"
license = "MIT"
repository = "https://github.com/Michael-A-Kuykendall/contextlite"
homepage = "https://contextlite.com"
documentation = "https://docs.contextlite.com"
keywords = ["search", "context", "ai", "indexing", "retrieval"]
categories = ["api-bindings", "database", "text-processing"]
include = [
    "src/**/*",
    "examples/**/*",
    "tests/**/*",
    "Cargo.toml",
    "README.md",
    "LICENSE*",
]
exclude = [
    "target/**/*",
    "*.exe",
    "*.pdb",
    "*.rlib",
    "types.rs",
    "test_types.*",
]

[dependencies]
# Async runtime
tokio = { version = "1.38", features = ["full"] }

# HTTP client with async support
reqwest = { version = "0.12", features = ["json", "stream"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID support
uuid = { version = "1.0", features = ["v4", "serde"] }

# URL handling
url = "2.5"
urlencoding = "2.1"

[dev-dependencies]
# Testing utilities
tokio-test = "0.4"

[features]
default = []

# Enable additional logging and debug features
debug = []

# Enable experimental features
experimental = []
